--- a/seed-inception-pvc.yml
+++ b/seed-inception-pvc.yml
@@ -21,7 +21,7 @@ spec:
       activeDeadlineSeconds: 7200
       containers:
       - name: seed
-        image: registry.access.redhat.com/rhel7-atomic
+        image: busybox
         command: ["/bin/sh"]
         args: ["-c", "curl -o /seed/inception-v3-2016-03-01.tar.gz http://download.tensorflow.org/models/image/imagenet/inception-v3-2016-03-01.tar.gz && cd /seed/ && tar -xzf inception-v3-2016-03-01.tar.gz && rm inception-v3-2016-03-01.tar.gz"]
         volumeMounts:
