--- a/seed-inception-pvc.yml
+++ b/seed-inception-pvc.yml
@@ -23,7 +23,7 @@ spec:
       - name: seed
         image: busybox
         command: ["/bin/sh"]
-        args: ["-c", "curl -o /seed/inception-v3-2016-03-01.tar.gz http://download.tensorflow.org/models/image/imagenet/inception-v3-2016-03-01.tar.gz && cd /seed/ && tar -xzf inception-v3-2016-03-01.tar.gz && rm inception-v3-2016-03-01.tar.gz"]
+        args: ["-c", "wget -O /seed/inception-v3-2016-03-01.tar.gz http://download.tensorflow.org/models/image/imagenet/inception-v3-2016-03-01.tar.gz && cd /seed/ && tar -xzf inception-v3-2016-03-01.tar.gz && rm inception-v3-2016-03-01.tar.gz"]
         volumeMounts:
         - name: seed
           mountPath: /seed
